--- a/web/templates/codify.html
+++ b/web/templates/codify.html
@@ -30,15 +30,19 @@
 	</head>
 	<body class="theme-panelContainer">
 		<div class="container-fluid theme-panelContainer">
+      Timeout:<br>
+		  <input type='text' value="60" class="inputFullWidth theme-panelTextbox" id='codifyTimeout'><br>
       Number of Events to Process:<br>
 		  <input type='text' value="0" class="inputFullWidth theme-panelTextbox" id='triggerEventCount'><br>
       Events:<br>
       <textarea id="events" class="inputFullWidth theme-panelTextArea" style="height: 150px;"></textarea></br>
       Codify Flow:<br>
-      <textarea id="codeEditor" class="inputFullWidth theme-panelTextArea" style="height: 350px;" wrap="soft"></textarea></br>
+      <textarea id="codeEditor" class="inputFullWidth theme-panelTextArea" style="height: 250px;" wrap="soft"></textarea></br>
       <button id="run" class="btn btn-primary theme-panelButton">Run</button></br>
+      <br>
+      <br>
       Output:<br>
-      <textarea id="output" class="inputFullWidth theme-panelTextArea" style="height: 250px;" wrap="soft"></textarea></br>
+      <textarea id="output" class="inputFullWidth theme-panelTextArea" style="height: 200px;" wrap="soft"></textarea></br>
 		</div>
 	</body>
 </html>
@@ -50,7 +54,7 @@
 <script>
   $("#run").click(function () {
     $('#output').text("Running...")
-    $.ajax({url: "/codify/", type:"POST", data:JSON.stringify({ events: $('#events').val(), eventCount: $('#triggerEventCount').val(), code: $('#codeEditor').val(), CSRF: CSRF }), contentType:"application/json", success: function(result) {
+    $.ajax({url: "/codify/", type:"POST", data:JSON.stringify({ events: $('#events').val(), eventCount: $('#triggerEventCount').val(), code: $('#codeEditor').val(), timeout : $('#codifyTimeout').val(), CSRF: CSRF }), contentType:"application/json", success: function(result) {
         $('#output').text(result["result"])
       } 
     });
