Added shake to login

--- a/react-web/src/default.css
+++ b/react-web/src/default.css
@@ -15,5 +15,6 @@
     --panelComponentBorder-Focus: #167bff;
 
     /* Alerts */
-    --errorBackgroundColor: #bd2727;
+    --errorBackgroundColor: #ffffff;
+    --errorColor: #ec0e0e;
 }
