--- a/react-web/src/components/login.component.css
+++ b/react-web/src/components/login.component.css
@@ -31,7 +31,7 @@
     text-align: center;
     margin: 0;
     line-height: 1;
-    padding-bottom: 45px;
+    padding-bottom: 15px;
 }
 
 .fullscreen {
@@ -53,26 +53,27 @@
 }
 
 .failedLoginAlert {
-    display: inline-block;
-    margin: 0 auto;
-    padding: 3px;
     text-align: center;
-    width: 350px;
-    background-color: var(--errorBackgroundColor);
-    box-shadow: 0 1px 6px var(--panelShadowColor1), 0 1px 4px var(--panelShadowColor2);
-    border-style: solid;
-    border-color: var(--panelBorderColor);
-    border-width: 1px;
-    padding: 5px 5px 5px 5px;
-    border-radius: 15px;
-    transition: all .3s;
-    color: var(--textColor);
+    width: 100%;
+    color: var(--errorColor);
 }
 
-.failedLoginAlertContainer {
-    text-align: center;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-    top: 215px;
+.shake {
+    animation: shake 0.25s;
+    animation-iteration-count: 2;
+}
+
+  
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
