--- a/react-web/src/app.css
+++ b/react-web/src/app.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   min-height: 100vh;
   display: flex;
@@ -20,3 +16,20 @@ body, html, .App, #root, .outer {
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
 }
 
+.container, .col {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+#sidebar-wrapper {
+  background-color: wheat;
+  min-height: 100vh !important;
+}
+
+#pageContent-wrapper {
+  background-color: gray;
+  min-width: 0;
+  width: 100%;
+  padding-top: 50px;
+  padding-left: 0;
+}
