--- a/react-web/src/app.css
+++ b/react-web/src/app.css
@@ -11,25 +11,20 @@ body, html, .App, #root, .outer {
   height: 100%;
 }
 
-.navbar-light {
-  background-color: #ffffff;
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-}
-
-.container, .col {
+.container, .col, .col-2 {
   padding-left: 0;
   padding-right: 0;
 }
 
 #sidebar-wrapper {
-  background-color: wheat;
   min-height: 100vh !important;
+  max-width: 250px;
 }
 
 #pageContent-wrapper {
-  background-color: gray;
+  background-color: var(--mainBackgroundColor);
   min-width: 0;
   width: 100%;
-  padding-top: 50px;
+  padding-top: 40px;
   padding-left: 0;
 }
