--- a/react-web/src/components/login.component.css
+++ b/react-web/src/components/login.component.css
@@ -38,6 +38,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 100;
     height: 100%;
     width: 100%;
     background-color: var(--mainBackgroundColor);
