--- a/react-web/src/components/tab.component.css
+++ b/react-web/src/components/tab.component.css
@@ -1,7 +1,6 @@
 #tab {
-    position: fixed;
     width: 100%;
     height: 50px;
-    background-color: red;
+    background-color: rgb(75, 75, 75);
 }
 
