--- a/react-web/src/components/login.component.css
+++ b/react-web/src/components/login.component.css
@@ -1,5 +1,9 @@
 .outer {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
