--- a/react-web/src/app.css
+++ b/react-web/src/app.css
@@ -31,18 +31,19 @@ hr {
   min-width: 0;
   width: 100%;
   height: 100%;
-  padding-top: 60px;
+  padding-top: 40px;
   padding-left: 20px;
   padding-right: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 00px;
+  overflow-y: auto;
 }
 
 .pageContent1 {
   width: 500px;
-  height: 100%;
-  border-width: 1px;
-  border-radius: 15px;
+  padding: 10px;
+  min-height: 100%;
   margin: auto;
+  background-color: var(--panelBackgroundColor);
 }
 
 .hide {
