Fixed cookie removing

--- a/react-web/src/app.css
+++ b/react-web/src/app.css
@@ -43,7 +43,7 @@ hr {
   padding: 10px;
   min-height: 100%;
   margin: auto;
-  background-color: var(--panelBackgroundColor);
+  background-color: var(--mainBackgroundColor);
 }
 
 .hide {
