Highlight password boxes on error

--- a/react-web/src/pages/myAccount.page.css
+++ b/react-web/src/pages/myAccount.page.css
@@ -15,6 +15,10 @@
     color: var(--errorColor);
 }
 
+.alertErrorBorder {
+    border-color: var(--errorColor);
+}
+
 .saved, .saved:focus, .saved:hover {
     background-color: var(--alertColor);
 }
