--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -41,6 +41,7 @@
                                         <li><a onclick="navigate('Backups','/admin/backups/')">Backups</a></li>
                                         <li><a onclick="navigate('Cleanup - Objects','/cleanup/')">Cleanup - Objects</a></li>
                                         <li><a onclick="navigate('Clear Cache (ALL)','/clearCache/')">Clear Cache (ALL)</a></li>
+                                        <li><a onclick="navigate('Distribute Cluster','/distributeCluster/')">Distribute Cluster</a></li>
                                     </div>
                                 </ul>
                             </div>
