--- a/react-web/src/app.css
+++ b/react-web/src/app.css
@@ -38,13 +38,35 @@ hr {
   overflow-y: auto;
 }
 
+.pageCenter-inner {
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.pageCenter-outer {
+  text-align: center;
+  width: 100%;
+  margin: auto;
+}
+
 .pageContent0 {
   width: 100%;
   height: 100%;
 }
 
 .pageContent1 {
-  width: 600px;
+  width: 75%;
+  padding-top: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 10px;
+  min-height: 100%;
+  margin: auto;
+  background-color: var(--mainBackgroundColor);
+}
+
+.pageContent2 {
+  width: 500px;
   padding-top: 10px;
   padding-left: 50px;
   padding-right: 50px;
