--- a/react-web/src/pages/conducts.page.css
+++ b/react-web/src/pages/conducts.page.css
@@ -1,10 +1,10 @@
 .conductNew {
     width: 125px;
     margin-left: 10px;
-    margin-top: 10px;
 }
 
 .conductSearch {
+    width: calc(100% - 155px);
     max-width: 425px;
     margin-left: 10px;
 }
