--- a/react-web/src/default.css
+++ b/react-web/src/default.css
@@ -1,7 +1,7 @@
 :root {
     /* Main */
     --mainBackgroundColor: #222222;
-    --textColor: #ddd;
+    --textColor: #dfd1d1;
     --textDisabledColor: #615f5f;
     --hoverColor: #220433;
 
